--- a/7/4.ipynb
+++ b/7/4.ipynb
@@ -21,6 +21,7 @@
         "b=2.897768e-3 # Wienin siirtymälain vakio\n",
         "c=2.99792e8 # Valon nopeus\n",
         "h=6.6260693e-34 # Plancin vakio\n",
+        "me=9.10938e-31 # Elektronin massa\n",
         "eV=1.6021766e-19 # Elektorinivoltti\n",
         "sigma=5.670374419e-8 # Stefan-Boltzman\n",
         "@printf \"%s\\n\" Dates.now();\n",
@@ -31,7 +32,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2021-11-15T18:25:28.6\n",
+            "2021-11-23T20:40:33.577\n",
             "Julia Version 1.5.4\n",
             "Commit 69fcb5745b (2021-03-11 19:13 UTC)\n",
             "Platform Info:\n",
@@ -47,7 +48,7 @@
           ]
         }
       ],
-      "execution_count": 36,
+      "execution_count": 2,
       "metadata": {
         "collapsed": true,
         "jupyter": {
@@ -60,24 +61,166 @@
           }
         },
         "execution": {
-          "iopub.status.busy": "2021-11-15T16:25:28.612Z",
-          "iopub.execute_input": "2021-11-15T16:25:28.634Z",
-          "iopub.status.idle": "2021-11-15T16:25:28.683Z"
+          "iopub.status.busy": "2021-11-23T18:40:33.507Z",
+          "iopub.execute_input": "2021-11-23T18:40:33.519Z",
+          "iopub.status.idle": "2021-11-23T18:40:35.428Z"
         }
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "2-5 \n",
+        "4-4 \n",
         "\n",
-        "Kirjan vastaus: 5-09 eV, Nikkeli"
+        "Kirjan vastaus: 16 astetta"
       ],
       "metadata": {
         "nteract": {
           "transient": {
             "deleting": false
           }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# d sin theta = k lambda\n",
+        "# lambda = h /(m*v)\n",
+        "E=7.7e-18\n",
+        "d=0.66e-9\n",
+        "v=sqrt(2*E/me)\n",
+        "lambda=h/(me*v)\n",
+        "theta=asin(lambda/d)\n",
+        "@printf(\"Kulma on %.0f astetta.\\n\",theta*180/pi)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kulma on 16 astetta.\n"
+          ]
+        }
+      ],
+      "execution_count": 4,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-23T18:40:46.866Z",
+          "iopub.execute_input": "2021-11-23T18:40:46.875Z",
+          "iopub.status.idle": "2021-11-23T18:40:46.892Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4-5 \n",
+        "\n",
+        "Kirjan vastaus: vähintään 67 V"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lambda=0.15e-9\n",
+        "v=h/(me*lambda)\n",
+        "U=0.5*me*v^2/eV\n",
+        "@printf(\"Kiihdytysjännitteen on oltava vähintään %.0f V.\\n\",U)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kiihdytysjännitteen on oltava vähintään 67 V.\n"
+          ]
+        }
+      ],
+      "execution_count": 6,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-23T18:45:28.881Z",
+          "iopub.execute_input": "2021-11-23T18:45:28.890Z",
+          "iopub.status.idle": "2021-11-23T18:45:28.934Z"
+        }
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4-6 \n",
+        "\n",
+        "Kirjan vastaus: 120 V"
+      ],
+      "metadata": {
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        }
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lambda=110e-12\n",
+        "v=h/(me*lambda)\n",
+        "U=0.5*me*v^2/eV\n",
+        "@printf(\"Kiihdytysjännitteen on oltava vähintään %.0f V.\\n\",U)"
+      ],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Kiihdytysjännitteen on oltava vähintään 124 V.\n"
+          ]
+        }
+      ],
+      "execution_count": 7,
+      "metadata": {
+        "collapsed": true,
+        "jupyter": {
+          "source_hidden": false,
+          "outputs_hidden": false
+        },
+        "nteract": {
+          "transient": {
+            "deleting": false
+          }
+        },
+        "execution": {
+          "iopub.status.busy": "2021-11-23T18:46:27.912Z",
+          "iopub.execute_input": "2021-11-23T18:46:27.923Z",
+          "iopub.status.idle": "2021-11-23T18:46:27.949Z"
         }
       }
     }
